# TUFF-Xwin

./: .gitignore  AGENTS.md  CLI_AGENT_TASK_2026-04-04.md  CLI_AGENT_TASK_2026-04-04_LEGAL.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  VULKAN_INTEGRATION.md  WAYLAND_FEATURE_COMPATIBILITY.md  deny.toml
.cargo/: config.toml
.github/: pull_request_template.md
LeyerX11/: README.md
crates/compd/: Cargo.toml
crates/compd/src/: main.rs
crates/wayland-wire-harness/: Cargo.toml  build.rs
crates/wayland-wire-harness/c/: libwayland_probe.c  xdg_shell_probe.c  xdg_shell_probe.h
crates/wayland-wire-harness/src/: lib.rs
crates/wayland-wire-harness/tests/: libwayland_client.rs
crates/waylandd/: Cargo.toml
crates/waylandd/src/: main.rs
docs/: README.md  api-boundary.md  architecture.md  components.md  crash-loop-policy.md  current-session-operation.md  debian-integration.md  design-memo.md  desktop-profiles.md  failure-model.md  ime-mozc-status.md  ipc-format.md  linux-distro-socket.md  plasma-integration.md  privacy-artifacts.md  repo-layout.md  roadmap.md  runtime-security.md  sequence-resume.md  session-instance-id-contract.md  takeover-and-installation.md  wayland-wire-parity.md
examples/: README.md
profiles/: README.md  demo-wayland-compd-recovery.json  demo-x11-compd-binding-collision.json  demo-x11-crashy.json  demo-x11-degraded.json  demo-x11-lockd-binding-collision.json  demo-x11-lockd-recovery-optin.json  demo-x11.json  host-wayland.json  openbox-x11.json  xfce-x11.json
scripts/: README.md  dev-check.sh  install-user.sh  mock-desktop-component.sh  run-binding-collision-handling-smoke.sh  run-compd-broker-recovery.sh  run-component-identity-mapping-smoke.sh  run-crash-loop-demo.sh  run-degraded-mode.sh  run-integration-smoke.sh  run-lockd-identity-and-ui-path-smoke.sh  run-profile-demo.sh  (+24 more)
(+88 files in other folders)
