[workspace]
members = [
    "crates/compd",
    "crates/displayd",
    "crates/lockd",
    "crates/sessiond",
    "crates/watchdog",
    "crates/waybroker-common",
    "crates/waylandd",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "git@github.com:elementary-particles-Man/TUFF-Xwin.git"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
waybroker-common = { path = "crates/waybroker-common" }
