[package]
name = "compd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
waybroker-common.workspace = true
vulkan-backend = { path = "../vulkan-backend" }
tokio = { version = "1.0", features = ["full"] }
