[package]
name = "waylandd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
byteorder = "1.5"
serde_json.workspace = true
waybroker-common.workspace = true
wayland-wire = { path = "../wayland-wire" }
vulkan-backend = { path = "../vulkan-backend" }
tokio = { version = "1.0", features = ["full"] }
